#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
ä¸»åˆ†æå™¨
æ•´åˆå›¾åƒåˆ†æã€è§„åˆ™å¼•æ“ã€å…«å­—èåˆã€AI å¢å¼º
"""

import os
import logging

logger = logging.getLogger(__name__)
import sys
from typing import Dict, Any, Optional
import json

BASE_DIR = os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(__file__))))
PROJECT_ROOT = BASE_DIR
sys.path.insert(0, PROJECT_ROOT)

# æ·»åŠ æœåŠ¡ç›®å½•åˆ°è·¯å¾„
service_dir = os.path.dirname(os.path.abspath(__file__))
sys.path.insert(0, service_dir)

from hand_analyzer import HandAnalyzer
from face_analyzer import FaceAnalyzer
# æ”¹ä¸ºè°ƒç”¨ fortune_rule å¾®æœåŠ¡ï¼Œä¸å†ä½¿ç”¨æœ¬åœ° rule_engine
from fortune_rule_client import FortuneRuleClient
from coze_integration import CozeIntegration

# å¯¼å…¥å…«å­—å®¢æˆ·ç«¯
try:
    from shared.clients.bazi_core_client_grpc import BaziCoreClient
    BAZI_CLIENT_AVAILABLE = True
except ImportError:
    BAZI_CLIENT_AVAILABLE = False
    logger.info("âš ï¸  å…«å­—å®¢æˆ·ç«¯æœªæ‰¾åˆ°ï¼Œå…«å­—èåˆåŠŸèƒ½å°†å—é™")


class FortuneAnalyzer:
    """å‘½ç†åˆ†æå™¨ä¸»ç±»"""
    
    def __init__(self):
        self.hand_analyzer = HandAnalyzer()
        self.face_analyzer = FaceAnalyzer()
        # ä½¿ç”¨ fortune_rule å¾®æœåŠ¡å®¢æˆ·ç«¯
        self.rule_client = FortuneRuleClient()
        self.coze_integration = CozeIntegration()
    
    def analyze_hand(
        self,
        image_bytes: bytes,
        image_format: str = "jpg",
        bazi_info: Optional[Any] = None
    ) -> Dict[str, Any]:
        """
        åˆ†ææ‰‹ç›¸
        
        Args:
            image_bytes: å›¾åƒå­—èŠ‚æ•°æ®
            image_format: å›¾åƒæ ¼å¼
            bazi_info: å…«å­—ä¿¡æ¯ï¼ˆprotobuf å¯¹è±¡ï¼‰
            
        Returns:
            åˆ†æç»“æœ
        """
        try:
            # 1. æå–æ‰‹éƒ¨ç‰¹å¾
            hand_result = self.hand_analyzer.analyze(image_bytes, image_format)
            
            if not hand_result.get("success"):
                return hand_result
            
            hand_features = hand_result.get("features", {})
            
            # 2. è§„åˆ™åŒ¹é…å’Œå…«å­—èåˆï¼ˆè°ƒç”¨ fortune_rule å¾®æœåŠ¡ï¼‰
            bazi_info_dict = None
            if bazi_info and bazi_info.use_bazi:
                bazi_info_dict = {
                    "solar_date": bazi_info.solar_date,
                    "solar_time": bazi_info.solar_time,
                    "gender": bazi_info.gender,
                    "use_bazi": True
                }
            
            # è°ƒç”¨ fortune_rule å¾®æœåŠ¡
            rule_result = self.rule_client.match_hand_rules(
                hand_features=hand_features,
                bazi_info=bazi_info_dict,
                bazi_data=None  # è®©å¾®æœåŠ¡å†…éƒ¨è·å–å…«å­—æ•°æ®
            )
            
            if not rule_result.get("success"):
                return {
                    "success": False,
                    "error": rule_result.get("error", "è§„åˆ™åŒ¹é…å¤±è´¥")
                }
            
            hand_insights = rule_result.get("insights", [])
            integrated_insights = rule_result.get("integrated_insights", [])
            recommendations = rule_result.get("recommendations", [])
            bazi_data = rule_result.get("bazi_data")
            
            # 6. AI å¢å¼ºï¼ˆä½¿ç”¨ Coze APIï¼‰
            ai_enhanced_insights = []
            try:
                # å‡†å¤‡æ•°æ®
                analysis_data = {
                    "type": "hand",
                    "features": hand_features,
                    "insights": hand_insights,
                    "bazi_data": bazi_data
                }
                
                # è°ƒç”¨ Coze API
                ai_result = self.coze_integration.enhance_analysis(analysis_data)
                if ai_result:
                    ai_enhanced_insights = ai_result.get("enhanced_insights", [])
            except Exception as e:
                logger.info(f"âš ï¸  Coze API è°ƒç”¨å¤±è´¥: {e}")
            
            # 7. åˆå¹¶æ‰€æœ‰æ´å¯Ÿï¼ˆå»é‡ï¼‰
            all_insights = hand_insights + integrated_insights + ai_enhanced_insights
            
            # å¯¹åˆå¹¶åçš„insightsè¿›è¡Œå»é‡å’Œæç‚¼
            from services.fortune_rule.rule_engine import FortuneRuleEngine
            rule_engine = FortuneRuleEngine()
            all_insights = rule_engine._merge_and_refine_insights(all_insights)
            
            # 8. è®¡ç®—ç½®ä¿¡åº¦
            confidence = self._calculate_confidence(hand_features, len(all_insights))
            
            # 9. æ„å»ºå®Œæ•´æŠ¥å‘Š
            report = {
                "success": True,
                "features": hand_features,
                "insights": all_insights,
                "integrated_insights": integrated_insights,
                "bazi_data": bazi_data,
                "recommendations": recommendations,
                "confidence": confidence
            }
            
            return report
            
        except Exception as e:
            import traceback
            error_msg = f"æ‰‹ç›¸åˆ†æå¤±è´¥: {str(e)}\n{traceback.format_exc()}"
            logger.info(f"âŒ {error_msg}")
            return {
                "success": False,
                "error": str(e)
            }
    
    def analyze_face(
        self,
        image_bytes: bytes,
        image_format: str = "jpg",
        bazi_info: Optional[Any] = None
    ) -> Dict[str, Any]:
        """
        åˆ†æé¢ç›¸
        
        Args:
            image_bytes: å›¾åƒå­—èŠ‚æ•°æ®
            image_format: å›¾åƒæ ¼å¼
            bazi_info: å…«å­—ä¿¡æ¯ï¼ˆprotobuf å¯¹è±¡ï¼‰
            
        Returns:
            åˆ†æç»“æœ
        """
        try:
            import datetime
            request_time = datetime.datetime.now().strftime("%Y-%m-%d %H:%M:%S")
            
            logger.info("\n" + "="*80)
            logger.info("ğŸ”® é¢ç›¸åˆ†ææµç¨‹å¼€å§‹")
            logger.info("="*80)
            logger.info(f"[{request_time}] ğŸ“¸ å¼€å§‹é¢ç›¸åˆ†æ")
            
            # 1. æå–é¢éƒ¨ç‰¹å¾ï¼ˆæ€§èƒ½ä¼˜åŒ–ï¼šé»˜è®¤å…³é—­ç‰¹æ®Šç‰¹å¾æ£€æµ‹ï¼‰
            logger.info(f"[{request_time}] ğŸ“‹ æ­¥éª¤1: æå–é¢éƒ¨ç‰¹å¾...")
            face_result = self.face_analyzer.analyze(image_bytes, image_format, enable_special_features=False)
            
            if not face_result.get("success"):
                logger.info(f"[{request_time}] âŒ é¢éƒ¨ç‰¹å¾æå–å¤±è´¥: {face_result.get('error', 'æœªçŸ¥é”™è¯¯')}")
                return face_result
            
            face_features = face_result.get("features", {})
            logger.info(f"[{request_time}] âœ… é¢éƒ¨ç‰¹å¾æå–å®Œæˆ")
            logger.info(f"[{request_time}] ğŸ“Š æå–çš„ç‰¹å¾:")
            san_ting = face_features.get("san_ting_ratio", {})
            measurements = face_features.get("feature_measurements", {})
            logger.info(f"   ä¸‰åœæ¯”ä¾‹: ä¸Šåœ={san_ting.get('upper', 0):.2%}, ä¸­åœ={san_ting.get('middle', 0):.2%}, ä¸‹åœ={san_ting.get('lower', 0):.2%}")
            if measurements:
                logger.info(f"   äº”å®˜ç‰¹å¾:")
                if measurements.get("forehead_width", 0) > 0:
                    logger.info(f"     é¢å¤´: å®½åº¦={measurements.get('forehead_width', 0):.1f}, æ¯”ä¾‹={measurements.get('forehead_ratio', 0):.2f}")
                if measurements.get("nose_height", 0) > 0:
                    logger.info(f"     é¼»å­: é«˜åº¦={measurements.get('nose_height', 0):.1f}, æ¯”ä¾‹={measurements.get('nose_ratio', 0):.2f}")
                if measurements.get("eye_width", 0) > 0:
                    logger.info(f"     çœ¼ç›: å®½åº¦={measurements.get('eye_width', 0):.1f}, å¯¹ç§°æ€§={measurements.get('eye_symmetry', 0):.2f}")
                if measurements.get("mouth_width", 0) > 0:
                    logger.info(f"     å˜´å·´: å®½åº¦={measurements.get('mouth_width', 0):.1f}")
                if measurements.get("face_ratio", 0) > 0:
                    logger.info(f"     é¢éƒ¨: å®½é«˜æ¯”={measurements.get('face_ratio', 0):.2f}")
            special_features = face_features.get("special_features", [])
            if special_features:
                logger.info(f"   ç‰¹æ®Šç‰¹å¾: {len(special_features)}ä¸ª")
            
            # 2. è§„åˆ™åŒ¹é…å’Œå…«å­—èåˆï¼ˆè°ƒç”¨ fortune_rule å¾®æœåŠ¡ï¼‰
            logger.info(f"\n[{request_time}] ğŸ“‹ æ­¥éª¤2: è§„åˆ™åŒ¹é…å’Œå…«å­—èåˆ...")
            bazi_info_dict = None
            if bazi_info and bazi_info.use_bazi:
                bazi_info_dict = {
                    "solar_date": bazi_info.solar_date,
                    "solar_time": bazi_info.solar_time,
                    "gender": bazi_info.gender,
                    "use_bazi": True
                }
                logger.info(f"[{request_time}] ğŸ“… å…«å­—ä¿¡æ¯: {bazi_info.solar_date} {bazi_info.solar_time} {bazi_info.gender}")
            else:
                logger.info(f"[{request_time}] âš ï¸  æœªæä¾›å…«å­—ä¿¡æ¯ï¼Œä»…è¿›è¡Œé¢ç›¸è§„åˆ™åŒ¹é…")
            
            # è°ƒç”¨ fortune_rule å¾®æœåŠ¡
            logger.info(f"[{request_time}] ğŸ” è°ƒç”¨ fortune_rule å¾®æœåŠ¡è¿›è¡Œè§„åˆ™åŒ¹é…...")
            rule_result = self.rule_client.match_face_rules(
                face_features=face_features,
                bazi_info=bazi_info_dict,
                bazi_data=None  # è®©å¾®æœåŠ¡å†…éƒ¨è·å–å…«å­—æ•°æ®
            )
            
            if not rule_result.get("success"):
                logger.info(f"[{request_time}] âŒ è§„åˆ™åŒ¹é…å¤±è´¥: {rule_result.get('error', 'æœªçŸ¥é”™è¯¯')}")
                return {
                    "success": False,
                    "error": rule_result.get("error", "è§„åˆ™åŒ¹é…å¤±è´¥")
                }
            
            face_insights = rule_result.get("insights", [])
            integrated_insights = rule_result.get("integrated_insights", [])
            recommendations = rule_result.get("recommendations", [])
            bazi_data = rule_result.get("bazi_data")
            
            logger.info(f"[{request_time}] âœ… è§„åˆ™åŒ¹é…å®Œæˆ")
            logger.info(f"[{request_time}] ğŸ“Š åŒ¹é…ç»“æœ:")
            logger.info(f"   é¢ç›¸è§„åˆ™æ´å¯Ÿ: {len(face_insights)}æ¡")
            logger.info(f"   å…«å­—èåˆæ´å¯Ÿ: {len(integrated_insights)}æ¡")
            logger.info(f"   å»ºè®®: {len(recommendations)}æ¡")
            
            # æ‰“å°å…«å­—ä¿¡æ¯ï¼ˆå¦‚æœæœ‰ï¼‰
            if bazi_data:
                self._print_bazi_info(bazi_data, 
                                     bazi_info.solar_date if bazi_info else None,
                                     bazi_info.solar_time if bazi_info else None,
                                     bazi_info.gender if bazi_info else None)
            
            # 3. AI å¢å¼ºï¼ˆå¯é€‰ï¼Œé»˜è®¤å…³é—­ä»¥æå‡æ€§èƒ½ï¼‰
            # æ³¨æ„ï¼šAIå¢å¼ºä¼šæ˜¾è‘—å¢åŠ å“åº”æ—¶é—´ï¼Œé»˜è®¤å…³é—­
            ai_enhanced_insights = []
            # å¦‚æœéœ€è¦AIå¢å¼ºï¼Œå¯ä»¥é€šè¿‡ç¯å¢ƒå˜é‡å¯ç”¨ï¼šENABLE_AI_ENHANCEMENT=true
            enable_ai = os.getenv("ENABLE_AI_ENHANCEMENT", "false").lower() == "true"
            if enable_ai:
                logger.info(f"\n[{request_time}] ğŸ“‹ æ­¥éª¤3: AI å¢å¼ºåˆ†æ...")
                try:
                    # å‡†å¤‡æ•°æ®
                    analysis_data = {
                        "type": "face",
                        "features": face_features,
                        "insights": face_insights,
                        "bazi_data": bazi_data
                    }
                    
                    # è°ƒç”¨ Coze API
                    logger.info(f"[{request_time}] ğŸ¤– è°ƒç”¨ Coze API è¿›è¡ŒAIå¢å¼º...")
                    ai_result = self.coze_integration.enhance_analysis(analysis_data)
                    if ai_result:
                        ai_enhanced_insights = ai_result.get("enhanced_insights", [])
                        logger.info(f"[{request_time}] âœ… AIå¢å¼ºå®Œæˆï¼Œæ–°å¢ {len(ai_enhanced_insights)} æ¡æ´å¯Ÿ")
                    else:
                        logger.info(f"[{request_time}] âš ï¸  AIå¢å¼ºæœªè¿”å›ç»“æœ")
                except Exception as e:
                    logger.info(f"[{request_time}] âš ï¸  Coze API è°ƒç”¨å¤±è´¥: {e}")
            else:
                logger.info(f"[{request_time}] â­ï¸  è·³è¿‡AIå¢å¼ºï¼ˆé»˜è®¤å…³é—­ä»¥æå‡æ€§èƒ½ï¼‰")
            
            # 4. åˆå¹¶æ‰€æœ‰æ´å¯Ÿï¼ˆå»é‡ï¼‰
            logger.info(f"\n[{request_time}] ğŸ“‹ æ­¥éª¤4: åˆå¹¶æ‰€æœ‰æ´å¯Ÿå¹¶å»é‡...")
            all_insights = face_insights + integrated_insights + ai_enhanced_insights
            
            # å¯¹åˆå¹¶åçš„insightsè¿›è¡Œå»é‡å’Œæç‚¼
            from services.fortune_rule.rule_engine import FortuneRuleEngine
            rule_engine = FortuneRuleEngine()
            all_insights = rule_engine._merge_and_refine_insights(all_insights)
            
            logger.info(f"[{request_time}] âœ… åˆå¹¶å®Œæˆï¼Œå…± {len(all_insights)} æ¡æ´å¯Ÿï¼ˆå·²å»é‡ï¼‰")
            
            # 5. è®¡ç®—ç½®ä¿¡åº¦
            logger.info(f"[{request_time}] ğŸ“‹ æ­¥éª¤5: è®¡ç®—ç½®ä¿¡åº¦...")
            confidence = self._calculate_confidence(face_features, len(all_insights))
            logger.info(f"[{request_time}] âœ… ç½®ä¿¡åº¦è®¡ç®—å®Œæˆ: {confidence:.2%}")
            
            # 6. æ„å»ºå®Œæ•´æŠ¥å‘Š
            logger.info(f"\n[{request_time}] ğŸ“‹ æ­¥éª¤6: æ„å»ºå®Œæ•´æŠ¥å‘Š...")
            report = {
                "success": True,
                "features": face_features,
                "insights": all_insights,
                "integrated_insights": integrated_insights,
                "bazi_data": bazi_data,
                "recommendations": recommendations,
                "confidence": confidence
            }
            
            logger.info(f"[{request_time}] âœ… é¢ç›¸åˆ†æå®Œæˆï¼")
            logger.info(f"[{request_time}] ğŸ“Š æœ€ç»ˆç»“æœ:")
            logger.info(f"   æ€»æ´å¯Ÿæ•°: {len(all_insights)}")
            logger.info(f"   å»ºè®®æ•°: {len(recommendations)}")
            logger.info(f"   ç½®ä¿¡åº¦: {confidence:.2%}")
            logger.info("="*80 + "\n")
            
            return report
            
        except Exception as e:
            import traceback
            error_msg = f"é¢ç›¸åˆ†æå¤±è´¥: {str(e)}\n{traceback.format_exc()}"
            logger.info(f"âŒ {error_msg}")
            return {
                "success": False,
                "error": str(e)
            }
    
    def _get_bazi_data(self, bazi_info: Any) -> Optional[Dict[str, Any]]:
        """è·å–å…«å­—æ•°æ®ï¼ˆä½¿ç”¨ BaziService ç¡®ä¿æ•°æ®å®Œæ•´ï¼‰"""
        try:
            # ä» protobuf å¯¹è±¡è·å–ä¿¡æ¯
            solar_date = bazi_info.solar_date
            solar_time = bazi_info.solar_time
            gender = bazi_info.gender
            
            logger.info(f"ğŸ“Š è·å–å…«å­—æ•°æ®: {solar_date} {solar_time} {gender}")
            
            # ä¼˜å…ˆä½¿ç”¨ BaziServiceï¼ˆæ›´å®Œæ•´çš„æ•°æ®ï¼‰
            try:
                from server.services.bazi_service import BaziService
                bazi_result = BaziService.calculate_bazi_full(solar_date, solar_time, gender)
                
                if bazi_result:
                    logger.info(f"âœ… ä½¿ç”¨ BaziService è·å–å…«å­—æ•°æ®æˆåŠŸ")
                    # BaziService è¿”å›çš„æ•°æ®æ ¼å¼æ˜¯ {"bazi": {...}, "rizhu": "...", "matched_rules": [...]}
                    # éœ€è¦æå– bazi å­—æ®µ
                    if isinstance(bazi_result, dict) and "bazi" in bazi_result:
                        bazi_data = bazi_result["bazi"]
                        # ç¡®ä¿åŒ…å«æ‰€æœ‰å¿…è¦å­—æ®µ
                        if not bazi_data.get("elements"):
                            bazi_data["elements"] = bazi_data.get("five_elements", {})
                        
                        # æ‰“å°è¯¦ç»†çš„å…«å­—ä¿¡æ¯åˆ°æ—¥å¿—
                        self._print_bazi_info(bazi_data, solar_date, solar_time, gender)
                        
                        return bazi_data
                    else:
                        # å¦‚æœå·²ç»æ˜¯æ ‡å‡†æ ¼å¼ï¼Œç›´æ¥è¿”å›
                        # æ‰“å°å…«å­—ä¿¡æ¯
                        self._print_bazi_info(bazi_result, solar_date, solar_time, gender)
                        return bazi_result
            except ImportError:
                logger.info("âš ï¸  BaziService ä¸å¯ç”¨ï¼Œä½¿ç”¨ BaziCoreClient")
            except Exception as e:
                logger.info(f"âš ï¸  BaziService è°ƒç”¨å¤±è´¥: {e}ï¼Œå°è¯•ä½¿ç”¨ BaziCoreClient")
            
            # é™çº§æ–¹æ¡ˆï¼šä½¿ç”¨ BaziCoreClient
            if BAZI_CLIENT_AVAILABLE:
                client = BaziCoreClient()
                bazi_result = client.calculate_bazi(solar_date, solar_time, gender)
                
                # è½¬æ¢ä¸ºå­—å…¸æ ¼å¼
                bazi_data = {
                    "basic_info": bazi_result.get("basic_info", {}),
                    "bazi_pillars": bazi_result.get("bazi_pillars", {}),
                    "element_counts": bazi_result.get("element_counts", {}),
                    "ten_gods_stats": bazi_result.get("ten_gods_stats", {}),
                    "elements": bazi_result.get("elements", {}),
                    "five_elements": bazi_result.get("elements", {})  # å…¼å®¹å­—æ®µ
                }
                
                logger.info(f"âœ… ä½¿ç”¨ BaziCoreClient è·å–å…«å­—æ•°æ®æˆåŠŸ")
                
                # æ‰“å°è¯¦ç»†çš„å…«å­—ä¿¡æ¯åˆ°æ—¥å¿—
                self._print_bazi_info(bazi_data, solar_date, solar_time, gender)
                
                return bazi_data
            
            return None
            
        except Exception as e:
            import traceback
            logger.info(f"âš ï¸  è·å–å…«å­—æ•°æ®å¤±è´¥: {e}")
            logger.info(f"è¯¦ç»†é”™è¯¯: {traceback.format_exc()}")
            return None
    
    def _print_bazi_info(self, bazi_data: Dict[str, Any], solar_date: str, solar_time: str, gender: str):
        """æ‰“å°è¯¦ç»†çš„å…«å­—ä¿¡æ¯åˆ°æ—¥å¿—"""
        try:
            logger.info("\n" + "="*80)
            logger.info("ğŸ“‹ å…«å­—è¯¦ç»†ä¿¡æ¯")
            logger.info("="*80)
            logger.info(f"å‡ºç”Ÿæ—¥æœŸ: {solar_date} {solar_time}")
            logger.info(f"æ€§åˆ«: {gender}")
            logger.info("-"*80)
            
            # åŸºæœ¬ä¿¡æ¯
            basic_info = bazi_data.get("basic_info", {})
            if basic_info:
                logger.info("ã€åŸºæœ¬ä¿¡æ¯ã€‘")
                logger.info(f"  å†œå†æ—¥æœŸ: {basic_info.get('lunar_date', 'æœªçŸ¥')}")
                logger.info(f"  æ—¶è¾°: {basic_info.get('time_ganzhi', 'æœªçŸ¥')}")
                logger.info("")
            
            # å…«å­—å››æŸ±ï¼ˆä¼˜å…ˆä» bazi_pillars è·å–ï¼Œå¦‚æœä¸ºç©ºåˆ™ä» elements ä¸­æå–ï¼‰
            bazi_pillars = bazi_data.get("bazi_pillars", {})
            elements = bazi_data.get("elements", {}) or bazi_data.get("five_elements", {})
            
            # å¦‚æœ bazi_pillars ä¸ºç©ºæˆ–æ ¼å¼ä¸å¯¹ï¼Œå°è¯•ä» elements ä¸­æå–
            if not bazi_pillars or not isinstance(bazi_pillars, dict) or not bazi_pillars.get("year"):
                if elements and isinstance(elements, dict):
                    # ä» elements ä¸­æå–å››æŸ±ä¿¡æ¯
                    year_elem = elements.get("year", {})
                    month_elem = elements.get("month", {})
                    day_elem = elements.get("day", {})
                    hour_elem = elements.get("hour", {})
                    
                    if year_elem and isinstance(year_elem, dict):
                        bazi_pillars = {
                            "year": {
                                "gan": year_elem.get("stem", ""),
                                "zhi": year_elem.get("branch", ""),
                                "gan_element": year_elem.get("stem_element", ""),
                                "zhi_element": year_elem.get("branch_element", "")
                            },
                            "month": {
                                "gan": month_elem.get("stem", "") if month_elem else "",
                                "zhi": month_elem.get("branch", "") if month_elem else "",
                                "gan_element": month_elem.get("stem_element", "") if month_elem else "",
                                "zhi_element": month_elem.get("branch_element", "") if month_elem else ""
                            },
                            "day": {
                                "gan": day_elem.get("stem", "") if day_elem else "",
                                "zhi": day_elem.get("branch", "") if day_elem else "",
                                "gan_element": day_elem.get("stem_element", "") if day_elem else "",
                                "zhi_element": day_elem.get("branch_element", "") if day_elem else ""
                            },
                            "hour": {
                                "gan": hour_elem.get("stem", "") if hour_elem else "",
                                "zhi": hour_elem.get("branch", "") if hour_elem else "",
                                "gan_element": hour_elem.get("stem_element", "") if hour_elem else "",
                                "zhi_element": hour_elem.get("branch_element", "") if hour_elem else ""
                            }
                        }
            
            if bazi_pillars and isinstance(bazi_pillars, dict):
                logger.info("ã€å…«å­—å››æŸ±ã€‘")
                year = bazi_pillars.get("year", {})
                month = bazi_pillars.get("month", {})
                day = bazi_pillars.get("day", {})
                hour = bazi_pillars.get("hour", {})
                
                # å…¼å®¹ä¸åŒçš„å­—æ®µåï¼ˆgan/zhi æˆ– stem/branchï¼‰
                year_gan = year.get('gan') or year.get('stem', '')
                year_zhi = year.get('zhi') or year.get('branch', '')
                year_gan_elem = year.get('gan_element') or year.get('stem_element', '')
                year_zhi_elem = year.get('zhi_element') or year.get('branch_element', '')
                
                month_gan = month.get('gan') or month.get('stem', '')
                month_zhi = month.get('zhi') or month.get('branch', '')
                month_gan_elem = month.get('gan_element') or month.get('stem_element', '')
                month_zhi_elem = month.get('zhi_element') or month.get('branch_element', '')
                
                day_gan = day.get('gan') or day.get('stem', '')
                day_zhi = day.get('zhi') or day.get('branch', '')
                day_gan_elem = day.get('gan_element') or day.get('stem_element', '')
                day_zhi_elem = day.get('zhi_element') or day.get('branch_element', '')
                
                hour_gan = hour.get('gan') or hour.get('stem', '')
                hour_zhi = hour.get('zhi') or hour.get('branch', '')
                hour_gan_elem = hour.get('gan_element') or hour.get('stem_element', '')
                hour_zhi_elem = hour.get('zhi_element') or hour.get('branch_element', '')
                
                logger.info(f"  å¹´æŸ±: {year_gan}{year_zhi} ({year_gan_elem}{year_zhi_elem})")
                logger.info(f"  æœˆæŸ±: {month_gan}{month_zhi} ({month_gan_elem}{month_zhi_elem})")
                logger.info(f"  æ—¥æŸ±: {day_gan}{day_zhi} ({day_gan_elem}{day_zhi_elem})")
                logger.info(f"  æ—¶æŸ±: {hour_gan}{hour_zhi} ({hour_gan_elem}{hour_zhi_elem})")
                logger.info("")
            
            # äº”è¡Œç»Ÿè®¡
            element_counts = bazi_data.get("element_counts", {})
            if element_counts:
                logger.info("ã€äº”è¡Œç»Ÿè®¡ã€‘")
                elements = ["æœ¨", "ç«", "åœŸ", "é‡‘", "æ°´"]
                for elem in elements:
                    count = element_counts.get(elem, 0)
                    bar = "â–ˆ" * count if count > 0 else ""
                    logger.info(f"  {elem}: {count} {bar}")
                logger.info("")
            
            # åç¥ç»Ÿè®¡
            ten_gods = bazi_data.get("ten_gods_stats", {})
            if ten_gods:
                logger.info("ã€åç¥ç»Ÿè®¡ã€‘")
                ten_gods_list = ["æ¯”è‚©", "åŠ«è´¢", "é£Ÿç¥", "ä¼¤å®˜", "åè´¢", "æ­£è´¢", "ä¸ƒæ€", "æ­£å®˜", "åå°", "æ­£å°"]
                for god in ten_gods_list:
                    count = ten_gods.get(god, 0)
                    if count > 0:
                        logger.info(f"  {god}: {count}")
                logger.info("")
            
            # æ—¥ä¸»ä¿¡æ¯
            rizhu = bazi_data.get("rizhu", "")
            if rizhu:
                logger.info(f"ã€æ—¥ä¸»ã€‘{rizhu}")
                logger.info("")
            
            # äº”è¡Œå…ƒç´ è¯¦æƒ…
            elements = bazi_data.get("elements", {}) or bazi_data.get("five_elements", {})
            if elements:
                logger.info("ã€äº”è¡Œå…ƒç´ è¯¦æƒ…ã€‘")
                for key, value in elements.items():
                    if isinstance(value, dict):
                        logger.info(f"  {key}: {value}")
                    else:
                        logger.info(f"  {key}: {value}")
                logger.info("")
            
            logger.info("="*80 + "\n")
        except Exception as e:
            logger.info(f"âš ï¸  æ‰“å°å…«å­—ä¿¡æ¯æ—¶å‡ºé”™: {e}")
            import traceback
            logger.error("", exc_info=True)
    
    def _calculate_confidence(self, features: Dict[str, Any], insight_count: int) -> float:
        """è®¡ç®—ç½®ä¿¡åº¦"""
        confidence = 0.5  # åŸºç¡€ç½®ä¿¡åº¦
        
        # æ ¹æ®ç‰¹å¾å®Œæ•´æ€§è°ƒæ•´
        if features:
            confidence += 0.2
        
        # æ ¹æ®æ´å¯Ÿæ•°é‡è°ƒæ•´
        if insight_count > 5:
            confidence += 0.2
        elif insight_count > 3:
            confidence += 0.1
        
        # é™åˆ¶åœ¨ 0-1 ä¹‹é—´
        return min(1.0, max(0.0, confidence))

